maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not enough arguments for method numeroterLesCases: (XBiscuit: Int, YBiscuit: Int, cpt: Int)Unit.
Unspecified value parameter cpt.
  numeroterLesCases(X,Y)
                   ^